[package]
name = "savegame_analysis"
version = "0.1.0"
authors = ["kangalioo"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
rayon = "1.3" # multithreading in replays analysis
btoi = "0.4" # fast int parsing in replays analysis
lexical = "5" # fast float parsing in replays analysis
itertools = "0.9" # for groupby days in skill timeline
libm = "0.2" # for erfc
roxmltree = "0.11" # xml parsing
anyhow = "1.0" # reasonable error handling
thiserror = "1.0" # reasonable error handling
walkdir = "2" # recursive directory walking is too hard to diy

[dependencies.pyo3]
version = "0.9.2"
features = ["extension-module"]

[profile.release]
lto = true
# this can just stay on debug=true, since it doesn't do harm on Windows anyway, and on
# Linux, it adds some debug info to the exeuctable no matter if debug=true or debug=false.
# So, we have to strip anyway, and can just let debug stay on true
debug = true

[profile.dev.package."*"]
opt-level = 3
