[package]
name = "savegame_analysis"
version = "0.1.0"
authors = ["kangalioo"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rayon = "1.3" # multithreading in replays analysis
btoi = "0.4" # fast int parsing in replays analysis (it's faster than lexical's int parsing)
# fast float parsing in replays analysis. default features disabled because we wanna use the fast
# incorrect algorithms
lexical-core = { version = "0.7", default-features = false }
itertools = "0.9" # various qol stuff
libm = "0.2" # for erfc
anyhow = "1.0" # reasonable error handling
#roxmltree = "0.11" # xml parsing
twoway = "0.2" # substring finding for extract_str
sqlite = "0.25" # read cache.db file for timing info
pyo3 = "0.10"
permutation = "0.2"

[features]
extension-module = ["pyo3/extension-module"]

[profile.release]
# this can just stay on debug=true, since it doesn't do harm on Windows anyway, and on Linux,
# debug=false doesn't properly work so we have to strip anyway
debug = true
lto = true # no lto locally cuz it takes looong to compile

[profile.dev.package."*"]
opt-level = 3
